--- a/content.html
+++ b/content.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,17 +63,17 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co" aria-expanded="false">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co" aria-expanded="false">
                         Services
                     </a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         About Us
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co">
                         About Us
                     </a></li></ul>
              <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
@@ -82,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
 
     
 
@@ -143,7 +142,7 @@
     <div class="container">
         <div class="justify-content-center row">
             <div class="media-container-column title col-12 col-md-10">
-                <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-1">Congenital Abnormalities<br></h2>
+                <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">Congenital Abnormalities<br></h2>
                 
                 <p class="mbr-text align-right mbr-white mbr-fonts-style display-5"><a href="page12.html" class="text-success">Definition</a> |<a href="page12.html" class="text-success"> Overview</a> | <a href="page12.html" class="text-success">Symptoms</a> | <a href="page12.html#info4-n8" class="text-success">Signs</a> | <a href="page12.html#info4-ne" class="text-success">Causes</a> | <a href="page12.html#info4-nb" class="text-success">Risk factors</a> | <a href="page12.html#info4-nf" class="text-success">Prevention</a> | <a href="page12.html#footer6-lx" class="text-success">Diagnosis</a> | <a href="page12.html#info4-nb" class="text-success">Treatment</a><br><br>A congenital anomaly congenital abnormality, congenital malformation, birth defect is a condition which is present at the time of birth which varies from the standard presentation of a normal child. <br><br>Types of congenital abnormalities
 <br>
