--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,17 +63,17 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co" aria-expanded="false">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co" aria-expanded="false">
                         Services
                     </a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-primary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
+                    <a class="nav-link link dropdown-toggle text-secondary display-7" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">
                         About Us
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-primary display-7" href="https://mobirise.co">New Item</a></div>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="https://mobirise.co">
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-secondary display-7" href="https://mobirise.co">New Item</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-secondary display-7" href="https://mobirise.co">
                         About Us
                     </a></li></ul>
              <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
@@ -82,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
 
     
 
@@ -130,11 +129,11 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_19" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_18" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-7">past paper questions answers</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                  <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><a href="page12.html" class="text-black">Definition of terms and concepts, anatomical position, terms of movements, anatomical</a><br><br>Planes and body cavities.<br><br>Structure and functions of the cell.<br><br>Primary tissues and their functions<br><br>Disorders of cells and tissues.<br></p>
                                 </div>
@@ -146,12 +145,12 @@
                       
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_19" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_18" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-7">exercises and quizes</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Skeletal system
 </strong><br><br>Bone tissue: Development, Classifications, Functions<br><br>Fractures and bone healing<br>
@@ -165,12 +164,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_19" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_18" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-7"><div>exercises and quizes
 </div></h4>
                                 </a>
                             </div>
-                            <div id="collapse3_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Blood
 </strong><br><br>Components of blood and functions<br>
@@ -186,11 +185,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_19" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse4_18" aria-expanded="false" aria-controls="collapse4">
                                     <h4 class="mbr-fonts-style display-7">Respiratory System</h4>
                                 </a>
                             </div>
-                            <div id="collapse4_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the respiratory system, their structure and functions.<br><br>Physiology of respiration: Pulmonary ventilation, External Respiration, Internal
 <br>respiration, Lung volumes and capacities<br><br>Control of respiration<br>
@@ -200,11 +199,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_19" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse5_18" aria-expanded="false" aria-controls="collapse5">
                                     <h4 class="mbr-fonts-style display-7">Urinary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse5_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Organs of the urinary system, structural composition and functions<br>
 <br>Physiology of the urinary system<br>
@@ -214,11 +213,11 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_19" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse6_18" aria-expanded="false" aria-controls="collapse6">
                                     <h4 class="mbr-fonts-style display-7">Intergumentary system.</h4>
                                 </a>
                             </div>
-                            <div id="collapse6_19" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_18" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Structure and functions of the skin and appenadages<br>
 <br>Disorders of the skin and its appendages</p>
