--- a/Health sciences.html
+++ b/Health sciences.html
@@ -59,7 +59,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Research Lab</a></span>
+                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Research Lab</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
 
     
 
@@ -111,7 +111,7 @@
                 <div class="card-wrapper media-container-row media-container-row">
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong><b>Clinical Medicine</b></strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="content.html" class="text-success">Diploma</a><br>Mobirise is an easy website builder -<br> just drop site elements to your page.<br><br><a href="page4.html" class="text-success">Bachelors</a><br>Mobirise is an easy website builder&nbsp;site elements to your page<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="content.html" class="text-success">Diploma</a><br>Mobirise is an easy website build<br> just drop site elements to your&nbsp;<br><br><a href="page4.html" class="text-success">Bachelors</a><br>Mobirise is an easy website builder&nbsp;site elements to your&nbsp;<br></p>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Nursing</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="page10.html" class="text-success">Certificate</a>&nbsp;<br>Mobirise is an easy website builder - just drop site elements to your page.
 <br>
-<br><a href="page12.html" class="text-success">Diploma</a><br>Mobirise is an easy website buildebuilder site elements to your<br></p>
+<br><a href="page12.html" class="text-success">Diploma</a><br>Mobirise is an easy website buildebuilder site elements to&nbsp;<br></p>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-5"><strong>Medical Lab Technology</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="page10.html" class="text-success">Certificate</a>&nbsp;<br>Mobirise is an easy website builder - just drop site elements to your page.
 <br>
-<br><a href="page12.html" class="text-success">Diploma</a>&nbsp;<br>Mobirise is an easy website buildebuilder site elements to your.<br></p>
+<br><a href="page12.html" class="text-success">Diploma</a>&nbsp;<br>Mobirise is an easy website buildebuilder site elements to&nbsp;<br></p>
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="j0YickSv/303OEQtnEP0O+KQGDkRDfdatwwkQ4HR/LvkjugZIHUuahfY7dU55YepFeaf+5iTp6Ab3JkuTrNbaYhBC0g2gAV3Uqcy43HuX3Pw8sp/6rhFaTeZrrNdhatJ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jHjJInfXmD5MMzyDKf1AiwpQEkN/Dcv5l9hypiw9JtjdwT23uFz2fYIitVQN7Clo0nYF7G3TcgP5lH7dROpE/AxrZdZBuiMx+aMgFg5YcQ1ov+o1woXoUfkZstO82PXf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
