--- a/content.html
+++ b/content.html
@@ -58,7 +58,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Research Lab</a></span>
+                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Research Lab</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section info3 cid-rWw8kzeFCu" id="info3-2w">
 
     
 
