--- a/Health sciences.html
+++ b/Health sciences.html
@@ -59,7 +59,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Research Lab</a></span>
+                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Research Lab</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -77,12 +77,12 @@
                 </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="content.html">
                         About Us
                     </a></li></ul>
-             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
+             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="content.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content5 cid-rWvjG3NauQ" id="content5-29">
 
     
 
@@ -261,7 +261,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dogynaPlEKbbzjcaZCwW0Ndho3x1um3SYEyuSLYYYk8ocwp+le1b13v4R4VLEWrETyovFTP9UJFy6cNsbUJfLeZM7KWP+x9QN9ZzQrzEcnT+k88bL+rsDsXFDRvPpRum">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OnFjQzuQPxz1HH4coFhOxTa2u5ph0lCsP8BSNNHkB4XxH4WqTE5lJ1ODJLoGmuw5/PLMySgoWVH3YT5D+ToFwcLBSGZWzdurlj0uvWNcKE2hPN0cwbbqPtZ4Y3+a80sq">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
