--- a/outline.html
+++ b/outline.html
@@ -58,7 +58,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Research Lab</a></span>
+                <span class="navbar-caption-wrap" style="color:red;"><a class="navbar-caption text-primary display-1" href="Health sciences.html" style="color:red;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Research Lab</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,12 +76,12 @@
                 </li><li class="nav-item"><a class="nav-link link text-primary display-7" href="content.html">
                         About Us
                     </a></li></ul>
-             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="Search Engine.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
+             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-info display-7" href="content.html"><span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn" style="font-size: 13px; color: rgb(255, 255, 255);"></span>Search</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
+<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section info3 cid-rWvCFLnE16" id="info3-2l">
 
     
 
